test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_fail_4/src/main.nr

        fn main() -> pub u64 {
            1 + main()
        }
        